force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <label>Product</label>
    <nameField>
        <label>Product Code</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>