force-app/main/default/objects/Product__c/fields/Business_Volume__c.field-meta.xml
<CustomField>
    <fullName>Business_Volume__c</fullName>
    <label>Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>