force-app/main/default/objects/Product__c/fields/Chinese_Description__c.field-meta.xml
<CustomField>
    <fullName>Chinese_Description__c</fullName>
    <label>Chinese Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>