force-app/main/default/objects/Product__c/fields/Cross_Factory_Material_Status__c.field-meta.xml
<CustomField>
    <fullName>Cross_Factory_Material_Status__c</fullName>
    <label>Cross Factory Material Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>