force-app/main/default/objects/Product__c/fields/Description_User__c.field-meta.xml
<CustomField>
    <fullName>Description_User__c</fullName>
    <formula>IF( OR(TEXT($User.LocaleSidKey) =&apos;es_MX&apos;,TEXT($User.LocaleSidKey) =&apos;es_AR&apos;), Spanish_Description__c ,English_Description__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>