force-app/main/default/objects/Product__c/fields/Effective_Start__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start__c</fullName>
    <label>Effective Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>