force-app/main/default/objects/Product__c/fields/External_Material_Group__c.field-meta.xml
<CustomField>
    <fullName>External_Material_Group__c</fullName>
    <label>External Material Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>