force-app/main/default/objects/Product__c/fields/Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight__c</fullName>
    <label>Gross Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>