force-app/main/default/objects/Product__c/fields/Laboratory_Office__c.field-meta.xml
<CustomField>
    <fullName>Laboratory_Office__c</fullName>
    <label>Laboratory/Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>001 A.I.</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>002 Formulation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>