force-app/main/default/objects/Product__c/fields/Net_Weight__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight__c</fullName>
    <label>Net Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>