force-app/main/default/objects/Product__c/fields/Portuguese_Description__c.field-meta.xml
<CustomField>
    <fullName>Portuguese_Description__c</fullName>
    <label>Portuguese Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>