force-app/main/default/objects/Product__c/fields/Spanish_Description__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Description__c</fullName>
    <label>Spanish Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>