force-app/main/default/objects/Product__c/fields/Virtual_Prodcut__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Prodcut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Virtual Prodcut</label>
    <type>Checkbox</type>
</CustomField>