force-app/main/default/objects/Product__c/recordTypes/ProductCombo.recordType-meta.xml
<RecordType>
    <fullName>ProductCombo</fullName>
    <active>true</active>
    <label>Product Combo</label>
</RecordType>