force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Chinese_Description__c</columns>
    <columns>English_Description__c</columns>
    <columns>Spanish_Description__c</columns>
    <columns>Portuguese_Description__c</columns>
    <columns>Material_Group__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>External_Id__c</columns>
    <columns>Cross_Factory_Material_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>